# opencv-dlco

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindOpenBLAS.cmake
include/: trainer.hpp
src/: CMakeLists.txt  comp-fulldists.cpp  comp-uprjdists.cpp  conv-impatches.cpp  export-opencv.cpp  gen-poolregion.cpp  kernelop-opencv.cu  misc.cpp  pj-learn.cpp  pj-stats.cpp  pr-learn.cpp  pr-learn.cu  pr-stats.cpp  vgg-desc.cpp
workspace/: 01-export.sh  02-genpoolregs.sh  03-compdist.sh  04-prlearn.sh  05-prstats.sh  06-pr-top.sh  07-compunproj.sh  08-pjlearn.sh  09-pjstats.sh  10-pj-top.sh  11-opencv-export.sh  README.md  pj-result-table.txt  pr-result-table.txt
workspace/dataset/: README.md
workspace/descs/: README.md
workspace/distances/: README.md
workspace/opencv/: README.md  vgg_generated_120.i  vgg_generated_48.i  vgg_generated_64.i  vgg_generated_80.i
workspace/opencv/original/: vgg_generated_46.i  vgg_generated_63.i  vgg_generated_77.i
workspace/pj-learn/: README.md  liberty-liberty-0.035-0.250-pr#7-0.0001-0.025-pj.h5  liberty-liberty-0.035-0.250-pr#7-0.0001-0.050-pj.h5  liberty-liberty-0.035-0.250-pr#7-0.0001-0.100-pj.h5  liberty-liberty-0.035-0.250-pr#7-0.0001-0.150-pj.h5  liberty-liberty-0.035-0.250-pr#7-0.0001-0.200-pj.h5  liberty-liberty-0.035-0.250-pr#7-0.0001-0.250-pj.h5  liberty-liberty-0.035-0.250-pr#7-0.0001-0.500-pj.h5  liberty-liberty-0.035-0.250-pr#7-0.0001-0.750-pj.h5  liberty-liberty-0.035-0.250-pr#7-0.0001-1.000-pj.h5  liberty-liberty-0.035-0.250-pr#7-0.0005-0.025-pj.h5  liberty-liberty-0.035-0.250-pr#7-0.0005-0.050-pj.h5  liberty-liberty-0.035-0.250-pr#7-0.0005-0.100-pj.h5  liberty-liberty-0.035-0.250-pr#7-0.0005-0.150-pj.h5  liberty-liberty-0.035-0.250-pr#7-0.0005-0.200-pj.h5  liberty-liberty-0.035-0.250-pr#7-0.0005-0.250-pj.h5  liberty-liberty-0.035-0.250-pr#7-0.0005-0.500-pj.h5  liberty-liberty-0.035-0.250-pr#7-0.0005-0.750-pj.h5  liberty-liberty-0.035-0.250-pr#7-0.0005-1.000-pj.h5  liberty-liberty-0.035-0.250-pr#7-0.0010-0.025-pj.h5  liberty-liberty-0.035-0.250-pr#7-0.0010-0.050-pj.h5  liberty-liberty-0.035-0.250-pr#7-0.0010-0.100-pj.h5  liberty-liberty-0.035-0.250-pr#7-0.0010-0.150-pj.h5  liberty-liberty-0.035-0.250-pr#7-0.0010-0.200-pj.h5  liberty-liberty-0.035-0.250-pr#7-0.0010-0.250-pj.h5  liberty-liberty-0.035-0.250-pr#7-0.0010-0.500-pj.h5  liberty-liberty-0.035-0.250-pr#7-0.0010-0.750-pj.h5  liberty-liberty-0.035-0.250-pr#7-0.0010-1.000-pj.h5  liberty-liberty-0.035-0.250-pr#7-0.0020-0.025-pj.h5  liberty-liberty-0.035-0.250-pr#7-0.0020-0.050-pj.h5  liberty-liberty-0.035-0.250-pr#7-0.0020-0.100-pj.h5  liberty-liberty-0.035-0.250-pr#7-0.0020-0.150-pj.h5  liberty-liberty-0.035-0.250-pr#7-0.0020-0.200-pj.h5  liberty-liberty-0.035-0.250-pr#7-0.0020-0.250-pj.h5  liberty-liberty-0.035-0.250-pr#7-0.0020-0.500-pj.h5  liberty-liberty-0.035-0.250-pr#7-0.0020-0.750-pj.h5  liberty-liberty-0.035-0.250-pr#7-0.0020-1.000-pj.h5  liberty-liberty-0.035-0.250-pr#7-0.0030-0.025-pj.h5  liberty-liberty-0.035-0.250-pr#7-0.0030-0.050-pj.h5  liberty-liberty-0.035-0.250-pr#7-0.0030-0.100-pj.h5  (+366 more)
workspace/pj-learn/originals/: liberty-rank_m0.001_g1.h5  liberty-rank_m0.002_g1.h5  liberty-rank_m0.003_g0.5.h5  notredame-rank_m0.001_g0.25.h5  notredame-rank_m0.001_g1.h5  notredame-rank_m0.003_g0.5.h5  yosemite-rank_m0.001_g0.5.h5  yosemite-rank_m0.002_g0.5.h5  yosemite-rank_m0.003_g0.25.h5
workspace/pr-learn/: README.md  liberty-0.001-0.005-pr.h5  liberty-0.001-0.010-pr.h5  liberty-0.001-0.015-pr.h5  liberty-0.001-0.020-pr.h5  liberty-0.001-0.025-pr.h5  liberty-0.001-0.030-pr.h5  liberty-0.001-0.040-pr.h5  liberty-0.001-0.050-pr.h5  liberty-0.001-0.075-pr.h5  liberty-0.001-0.100-pr.h5  liberty-0.001-0.125-pr.h5  liberty-0.001-0.150-pr.h5  liberty-0.001-0.175-pr.h5  liberty-0.001-0.200-pr.h5  liberty-0.001-0.225-pr.h5  liberty-0.001-0.250-pr.h5  liberty-0.002-0.005-pr.h5  liberty-0.002-0.010-pr.h5  liberty-0.002-0.015-pr.h5  liberty-0.002-0.020-pr.h5  liberty-0.002-0.025-pr.h5  liberty-0.002-0.030-pr.h5  liberty-0.002-0.040-pr.h5  liberty-0.002-0.050-pr.h5  liberty-0.002-0.075-pr.h5  liberty-0.002-0.100-pr.h5  liberty-0.002-0.125-pr.h5  liberty-0.002-0.150-pr.h5  liberty-0.002-0.175-pr.h5  liberty-0.002-0.200-pr.h5  liberty-0.002-0.225-pr.h5  liberty-0.002-0.250-pr.h5  liberty-0.0025-0.010-pr.h5  liberty-0.0025-0.015-pr.h5  liberty-0.0025-0.020-pr.h5  liberty-0.0025-0.025-pr.h5  liberty-0.0025-0.050-pr.h5  liberty-0.0025-0.075-pr.h5  liberty-0.0025-0.100-pr.h5  (+740 more)
workspace/pr-learn/olderbest/: liberty-0.045-0.075-pr.h5  notredame-0.020-0.150-pr.h5  notredame-0.025-0.150-pr.h5  yosemite-0.025-0.075-pr.h5  yosemite-0.045-0.175-pr.h5
workspace/pr-learn/originals/: liberty-PR_rank_m0.5_g8.h5  notredame-rank_m0.15_g0.5-pr.h5  yosemite-rank_m0.25_g4-pr.h5
